[package]
name = "yargg"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/centaurii44/yargg"
description = "Yet another Rust guessing game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"